Add Phase 1 test data files and mismatch detection integration tests
Add 6 missing test data files (MismatchInVia, MismatchInZipWith,
MismatchInThen, MismatchInRecoverWith, MismatchInOrElse, GenericPathUsage)
and corresponding compile-testing integration tests that verify the
checker detects Path type mismatches in via(), zipWith(), then(),
recoverWith(), and orElse(). Also add hkj-core as a test dependency
and enable --enable-preview for compile-testing invocations.

https://claude.ai/code/session_01EF8RMbwdhUhgNca7of13Lw